chore(home): Fix explore section
Remove container class so the cards take the whole screen width
Remove horizontal scroll
Remove flex wrap

--- a/css/cards.css
+++ b/css/cards.css
@@ -242,11 +242,12 @@ background-image: var(--card-img-internship);
     align-items: center;
     justify-content: center;
     gap: 3rem;
-    width: 100vw;
+    width: 100%;
+    height: auto;
 }
 
 
-@media (max-width: 80em) {
+@media (max-width: 77em) {
     .product-card__container-wide {
       flex-direction: column;
     }
